--- a/style-2.css
+++ b/style-2.css
@@ -10,6 +10,7 @@ img { width: 100%; height: auto; display: block }
 input, button, textarea, select { font: inherit }
 
 body { padding: 4% 20% }
+body { background-color: purple; }
 
 /* ================= ENDS ================ */
 
@@ -19,6 +20,7 @@ h1 {
     text-align: center;
     font-weight: normal;
     letter-spacing: 4px;
+    color: white;
 }
 
 h2 {
@@ -26,6 +28,7 @@ h2 {
     margin-bottom: 4px;
     margin-top: 54px;
     text-transform: uppercase;
+    color: white;
 }
 
 p {
@@ -33,4 +36,8 @@ p {
     font-family: sans-serif;
     line-height: 1.6;
     margin-bottom: 20px;
+    color: white;
+}
+a { 
+    color: white; 
 }
