--- a/style-1.css
+++ b/style-1.css
@@ -10,6 +10,7 @@ img { width: 100%; height: auto; display: block }
 input, button, textarea, select { font: inherit }
 
 body { padding: 4% 20% }
+body { background-color: antiquewhite; }
 
 h1 {
 font-size: 84px;    
@@ -17,16 +18,19 @@ text-align: center;
 font-weight: normal;
 letter-spacing: -2px;
 margin-bottom: 32px;
+color: brown;
 }
 
 h2 {
     font-size: 36px;
     margin-bottom: 4px;
+    color: brown;
 }
 
 h3 {
     font-size: 24px;
     margin-bottom: 4px;
+    color: brown;
 }
 
 p {
@@ -34,4 +38,9 @@ p {
     font-family: sans-serif;
     line-height: 1.6;
     margin-bottom: 20px;
+
 }
+a { 
+    color: brown; 
+}
+
